@@ -1,3 +1,8 @@
+2004-05-13  Bryce McKinlay  <mckinlay@redhat.com>
+
+	* dwarf2loc.c (find_location_expression): Use ANOFFSET to adjust
+	base_address for shared libraries.
+
 2004-05-11  Nick Roberts  <nickrob@gnu.org>
 
 	* utils.c (defaulted_query): Just use the normal query input type
